Always show scroll to prevent layout shift

--- a/src/components/cesg.css
+++ b/src/components/cesg.css
@@ -1,3 +1,7 @@
+html {
+  overflow-y:scroll;
+}
+
 .input--cesg {
   border: 1px solid #757575;
   margin: 0;
